--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,13 +3,26 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #000;
+    background-color: #0090be;
 }
 
 html {
     width: 100%;
     height: 100%;
 }
+
+i.gll-logo {
+  display: inline-block;
+  width: 35px;
+  height: 25px;
+  margin-top: -20px;
+  background-image: url('../img/logo.svg');  
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  background-size: contain;
+  -o-background-size: contain;
+}
+
 
 h1,
 h2,
@@ -39,7 +52,7 @@ p {
 }
 
 a {
-    color: #28c3ab;
+    color: #000;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -48,7 +61,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #176e61;
+    color: #fff;
 }
 
 .light {
@@ -65,6 +78,11 @@ a:focus {
 
 .navbar-brand {
     font-weight: 700;
+    vertical-align: top;
+}
+
+.navbar-brand .light {
+  vertical-align: top;
 }
 
 .navbar-brand:focus {
@@ -110,6 +128,7 @@ a:focus {
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
 
+
     .top-nav-collapse {
         padding: 0;
         background-color: #000;
@@ -126,13 +145,13 @@ a:focus {
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    color: #0090BE;
+    background: url(../img/intro-bg.jpg) no-repeat top center scroll;
+    background-color: #fff;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    background-size: contain;
+    -o-background-size: contain;
 }
 
 .intro-body {
@@ -142,6 +161,7 @@ a:focus {
 
 .brand-heading {
     font-size: 40px;
+    margin-top: 30%;
 }
 
 .intro-text {
@@ -155,7 +175,8 @@ a:focus {
     }
 
     .brand-heading {
-        font-size: 100px;
+        font-size: 60px;
+        margin-top: 50%;
     }
 
     .intro-text {
@@ -183,6 +204,15 @@ a:focus {
     outline: 0;
     color: #fff;
     background: rgba(255,255,255,.1);
+}
+
+.intro-body .btn,
+#terugblik {
+  color: #0090be !important;
+  border: 2px solid #0090be !important;
+}
+.btn-circle {
+  margin-bottom: 5%;
 }
 
 .page-scroll .btn-circle i.animated {
@@ -284,17 +314,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #28c3ab;
-    color: #28c3ab;
+    border: 1px solid #0090be;
+    color: #0090be;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #28c3ab;
+    border: 1px solid #00A0be;
     outline: 0;
-    color: #000;
-    background-color: #28c3ab;
+    color: #fff;
+    background-color: #00A0be;
 }
 
 .btn-huge {
@@ -346,4 +376,10 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+
+/* Section Stuff */
+#terugblik {
+  background-color: #fff;
 }
