--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -43,11 +43,19 @@ p {
     line-height: 1.5;
 }
 
+section li {
+    font-size: 18px;
+    text-align: left;
+}
+
 @media(min-width:767px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
+    }
+    section li {
+        font-size: 20px;
     }
 }
 
@@ -158,10 +166,15 @@ a:focus {
     display: table-cell;
     vertical-align: middle;
 }
-
+.intro .brand-heading {
+    
+    margin-bottom: 0;
+}
 .brand-heading {
     font-size: 40px;
-    margin-top: 30%;
+    color: #0090BE;
+    margin-bottom: 35%;
+    margin-top: 20%;
 }
 
 .intro-text {
@@ -174,9 +187,12 @@ a:focus {
         padding: 0;
     }
 
+    .intro .brand-heading {
+        margin-top: 50%;
+    }
+    
     .brand-heading {
         font-size: 60px;
-        margin-top: 50%;
     }
 
     .intro-text {
@@ -285,6 +301,33 @@ a:focus {
     -o-background-size: cover;
 }
 
+#blikvooruit,
+#contact {
+    background: #fff;
+    color: #0090be;
+}
+
+#terugblik-apps4ghent {
+    background: url(../img/a4g.jpg) no-repeat center center fixed;
+    background-color: #0090be;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+#terugblik-advertenties {
+    background: url(../img/zone09.jpg) no-repeat center center fixed;
+    background-color: #0090be;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+#contact .brand-heading {
+  margin-bottom: 150px;
+}
 #map {
     width: 100%;
     height: 200px;
@@ -293,7 +336,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 100px;
     }
 
     .download-section {
